# trading_indicators

./: binance_ws.py  calc_engine.py  config.py  efficient_load.py  engine.py  liner_regression.py  test.py
Controller Code/: MyLabKey.pem  README_FILES_NEEDED.md  audio_direct_v1_1.v  audio_direct_v1_1_S00_AXI.v  base.bit  base.hwh  base.tcl  experimental porject.ipynb  experimental porject.py  new_audio.py  sigma_delta.v
Controller Code/.ipynb_checkpoints/: experimental porject-checkpoint.ipynb
Controller Code/Trading Indicatiors files/: binance_ws.py  calc_engine.py  engine.py  feature_normaliser.py  line_regression_models.py  pynq_full.py
Controller Code/pynq/: audio_direct_v1_1.v  audio_direct_v1_1_S00_AXI.v  pdm_clk_mic.v  pdm_mic.v  pdm_rxtx.v  pdm_ser.v
cpp/: CMakeLists.txt  main.cpp
linear_regression/: hardware_lr.py  hardware_lr2.py  local_dma.ipynb
linear_regression/pynq/: setup.py
liner_regression/: hardware_lr.py  helpers.py  lr_engine.py  software_optimised_liner_regression.py  source.cpp  unoptimised_lr.py
liner_regression/pynq/: main.py
pynq_jupyter_notebook/: binance_ws.py  calc_engine.py  calc_engine_v2.py  engine.py  feature_normaliser.py  final_demo.py  line_regression_models.py  main1k.txt  main2k.txt  parser.py  pynq_full.py  pynq_full_v2.py  pynq_full_v3.py
tests/: binance_ws.py  calc_engine.py  feature_fn_map.txt  final_pynq_code.py  pynq.py  pynq_binance.py  send_weights_request.py  test_eth.py
